lintian (2.5.43) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * commands/reporting-sync-state.pm:
    + [NT] Use the sha256 instead of the sha1 checksum field
      for finding related files and checking of members have
      changed.

  * frontend/dplint:
    + [NT] Put $LINTIAN_VERSION on its own line so the build
      time substitution works again.  Thanks to Stuart
      Prescott for reporting the issue.

  * lib/Lintian/Check.pm:
    + [JW,ADB] Don't ignore midword punctuation characters when
      spell-checking.  (Closes: #818003)  Thanks to Andreas Beckmann for
      the bug report.

 -- Niels Thykier <niels@thykier.net>  Fri, 11 Mar 2016 18:35:45 +0000

lintian (2.5.42.1) unstable; urgency=medium

  * checks/binaries.desc:
    + [NT] Remove the experimental marker from the tags about
      (partially) unstripped static libraries.
    + [NT] Remove the experimental marker from the no-pie and
      no-bindnow hardening tags.
  * checks/changelog-file.pm:
    + [JW] Fix use of uninitialized value when checking incorrectly
      formatted changelog entries.

  * commands/reporting-lintian-harness.pm:
    + [NT] Add missing close and seek to the end of the new
      lintian log file before appending to it.

  * data/binaries/embedded-libs:
    + [JW] Apply patch from Sebastian Ramacher to allow ffmpeg as
      libpostproc provider.  (Closes: #817004)

  * lib/Lintian/Tag/Info.pm:
    + [JW] Use manpages.debian.org (instead of manpages.debian.net) for
      manual page hyperlinks.

 -- Niels Thykier <niels@thykier.net>  Fri, 11 Mar 2016 17:43:28 +0000

lintian (2.5.42) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - systemd-service-file-missing-documentation-key
    + Removed:
      - dh_scrollkeeper-is-deprecated
      - dh_suidregister-is-obsolete

  * checks/copyright-file.pm:
    + [NT] Apply patch from Rafael Kitover to avoid some